objects/hed__Course__c.object
<CustomObject>
    <description>Academic course that a Department or School (the degree-granting Account type for the educational institution) offers.</description>
    <fields>
        <fullName>Course_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Course_External_ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>hed__Account__c</fullName>
        <label>Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>hed__Course_ID__c</fullName>
        <label>Course ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Credit_Hours__c</fullName>
        <label>Credit Hours</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>hed__Extended_Description__c</fullName>
        <description>A text area capable of accepting longer course descriptions.</description>
        <label>Extended Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>English_Department_Courses</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>English Department Courses</label>
    </listViews>
    <listViews>
        <fullName>Math_Department_Courses</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Math Department Courses</label>
    </listViews>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>